Remove Entwine from Asset Manager - Records
Removes entwine classes from ARecord.java and related
classes, which are quite a lot.

This replaces entwinemedia.fn.Stream's. An entwine stream
is basically a Collection that allows you to use functional
syntax and has way too much functionality for our purposes.
I opted to replace them with java.util.List as a default
collection to narrow the typing at least a little bit. I
also used java.util.Set and java.util.LinkedHashSet where
uniqueness of collection elements was a requirement. Then
I emulated the relevant entwine Stream functions with
java.util.stream's.